Fix to container problem - http://stackoverflow.com/questions/8403882/css-text-align-bottom-of-container

--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@ h1 {
 	margin-right: auto;
 	border-radius: 5px;
 	border: 3px solid #FEFCFF;
+	position: relative;
 	}
 	
 #headshot-content {
-	position: relative;
+	position: absolute;
 	bottom: 0;
-	left: 0;
 	padding: 10px;
 	}
